--- a/MakeMyTrip/Configurations/Config.properties
+++ b/MakeMyTrip/Configurations/Config.properties
@@ -1,3 +1,3 @@
-public String baseURL = "https://www.makemytrip.com/";
-public String email = "sopya@yopmail.com";
-public String pass = "Swapnil@123";
+baseURL = https://www.makemytrip.com
+email = sopya@yopmail.com
+pass = Swapnil@123
