New Commit Rohan

--- a/MakeMyTrip/Configurations/Config.properties
+++ b/MakeMyTrip/Configurations/Config.properties
@@ -1,3 +1,5 @@
 baseURL = https://www.makemytrip.com
 email = sopya@yopmail.com
 pass = Swapnil@123
+invalidEmail = sopya123@yopmail.com	
+invalidPass = abcd123
